# lens

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  SECURITY.md  next.config.mjs  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.ts  tsconfig.json  vercel.json
.github/: dependabot.yml
.github/workflows/: ci-and-publish.yml  dependabot-auto-merge.yml  deploy-vercel.yml  monitor.yml  publish-turso.yml
api/: index.py  requirements.txt
app/: globals.css  layout.tsx  page.tsx
app/analyze/: page.tsx
app/components/: IdeaCard.tsx  SearchBox.tsx  StatsBar.tsx
app/explain/: page.tsx
app/explain/[concept]/: ConceptView.tsx  page.tsx
app/ideas/: page.tsx
app/usage/: page.tsx
docs/: architecture.md  deployment.md  web-deployment.md
docs/plans/: 2026-03-20-plan-1-foundation.md  2026-03-21-plan-2-acquire.md  2026-03-21-plan-3-extract.md  2026-03-21-plan-4-taxonomy-structure.md  2026-03-21-plan-5-serve.md  2026-03-21-plan-6-monitor-ideation.md  2026-04-08-deepxiv-integration.md  2026-04-12-paper-search.md  2026-07-15-pattern-guided-idea-cards.md  2026-07-15-scoop-check.md
docs/specs/: 2026-04-08-deepxiv-integration-design.md  2026-04-12-paper-search-design.md  2026-07-15-pattern-guided-idea-cards-design.md  2026-07-15-scoop-check-design.md  design.md
docs/superpowers/plans/: 2026-03-21-architecture-agentic-catalogs.md  2026-03-28-sqlite-migration.md  2026-03-29-guided-extraction.md  2026-03-29-unified-vocabulary.md  2026-04-05-event-log-and-lint.md  2026-04-05-production-hardening.md  2026-04-12-functionality-gaps.md  2026-07-19-ideas-showcase.md
docs/superpowers/specs/: 2026-03-21-architecture-agentic-catalogs-design.md  2026-03-28-sqlite-migration-design.md  2026-03-29-guided-extraction-design.md  2026-03-29-unified-vocabulary-design.md  2026-04-05-event-log-and-lint-design.md  2026-04-05-production-hardening-design.md  2026-04-12-functionality-gaps-design.md  2026-07-18-ideation-diversity-gate-design.md  2026-07-19-vetted-novelty-ideas-showcase-design.md
lib/: api.ts  use-track-once.ts
scripts/: build_seed_fixture.py  dev.sh  enrich_restored_db.py  publish_to_turso.py  reembed_corpus.py  restore_from_turso.py  smoke_test_turso.py
src/lens/: __init__.py  cli.py  config.py
src/lens/acquire/: __init__.py  arxiv.py  deepxiv.py  http.py  openalex.py  pdf.py  quality.py  seed.py  semantic_scholar.py
src/lens/data/: seed_papers.yaml
src/lens/extract/: __init__.py  extractor.py  prompts.py
src/lens/knowledge/: __init__.py  events.py  linter.py  matrix.py  scoop_check.py
src/lens/llm/: __init__.py  client.py  utils.py
src/lens/monitor/: __init__.py  ideation.py  watcher.py
src/lens/serve/: __init__.py  analyzer.py  explainer.py  explorer.py  provenance.py
src/lens/store/: __init__.py  models.py  protocols.py  store.py  turso_store.py
src/lens/taxonomy/: __init__.py  clusterer.py  embedder.py  labeler.py  versioning.py  vocabulary.py
tests/: conftest.py  test_acquire_arxiv.py  test_acquire_deepxiv.py  test_acquire_openalex.py  test_acquire_pdf.py  test_acquire_seed.py  test_acquire_semantic.py  test_analyzer.py  test_api_index.py  test_cli.py  test_cli_scoop_check.py  test_config.py  test_event_log.py  test_explainer.py  test_explorer.py  test_extract.py  test_extraction.py  test_ideation.py  test_lint_integration.py  test_linter.py  test_llm_client.py  test_matrix.py  test_models.py  test_monitor.py  test_provenance.py  test_publish_to_turso.py  test_quality.py  test_scoop_check.py  test_semantic_scholar.py  test_store.py  test_store_protocols.py  test_taxonomy.py  test_turso_store.py  test_vocabulary.py
tests/fixtures/: arxiv_response.xml  extraction_response.json  openalex_response.json  semantic_response.json
