[project]
name = "lens-research"
version = "0.10.1"
description = "LLM Engineering Navigation System — discovers recurring solution patterns from LLM research papers"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Qing", email = "qingye779@gmail.com" }]
license = { text = "MIT" }
keywords = ["llm", "research", "tradeoffs", "triz", "knowledge-base", "arxiv", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.0",
    "typer>=0.12",
    "pyyaml>=6.0",
    "openai>=1.0",
    "rich>=13.0",
    "httpx>=0.28.1",
    "tenacity>=9.1.4",
    "arxiv>=2.4.1",
    "python-dotenv>=1.2.2",
    "json-repair>=0.58.7",
    # numpy used by taxonomy/embedder.py at module-import time. ~30 MB,
    # well under the Vercel bundle cap, and used unconditionally by the
    # cloud-embedding code path the runtime needs.
    "numpy>=1.24",
]

[project.optional-dependencies]
litellm = ["litellm>=1.83.7"]
deepxiv = ["deepxiv-sdk>=0.2.5"]
turso = ["libsql-client>=0.3.0"]
# The `local` extra carries the heavy ML dependencies that the local
# CLI / build pipeline / tests need (LensStore + sentence-transformers
# embeddings) but the Vercel runtime does NOT — Vercel uses TursoStore
# and cloud embeddings, so installing torch + CUDA there blows the
# 500 MB bundle cap (last attempt: 7137 MB unzipped, mostly PyTorch
# CUDA bindings).
# Split out from the original ``local`` extra so a developer can run
# the local FastAPI runtime against ``LensStore`` (sqlite-vec) WITHOUT
# pulling in sentence-transformers + torch. Reasoning: torch is ~400
# MB resident and is not needed when ``embeddings.provider: cloud``
# is configured (the default for web-tier work). Local extraction or
# offline embedding still requires the full ``local-embed`` extra.
local-store = ["sqlite-vec>=0.1.7"]
local-embed = [
    "lens-research[local-store]",
    "sentence-transformers>=5.3.0",
]
# Back-compat alias — existing scripts / docs / Makefile targets that
# pass ``--extra local`` keep working with full torch+sentence-transformers.
# New callers should pick the narrowest extra they actually need.
local = ["lens-research[local-embed]"]

# `web` is the install Vercel runs in production. Vercel's FastAPI
# auto-detection invokes the ASGI ``app`` directly — uvicorn is NOT
# part of the production runtime and lives in `serve` (local dev
# probe / smoke tests) instead. Keeping it out of `web` shaves a
# small amount of bundle size and keeps the dependency story honest.
web = [
    "lens-research[turso]",
    "fastapi>=0.115",
]
serve = ["lens-research[web]", "uvicorn>=0.30"]

[project.scripts]
lens = "lens.cli:app"
# Vercel's FastAPI auto-detection looks for a ``[project.scripts] app``
# entry as the ASGI entrypoint when the file is at a non-standard
# location (we keep it at api/index.py for local dev / tests). Same
# pattern as the Flask example in
# https://vercel.com/docs/frameworks/backend/flask
app = "api.index:app"

[project.urls]
Homepage = "https://github.com/flyersworder/lens"
Repository = "https://github.com/flyersworder/lens"
Issues = "https://github.com/flyersworder/lens/issues"
Changelog = "https://github.com/flyersworder/lens/releases"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lens"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Add repo root to pythonpath so `from api.index import ...` works in
# tests without sys.path hackery (api/ is a sibling of src/, not under it).
pythonpath = [".", "src"]
markers = [
    "integration: marks tests that hit live APIs (deselect with '-m \"not integration\"')",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "pytest-timeout>=2.4.0",
]

[tool.uv]
# Dependency overrides to bypass stale upstream pins for security fixes:
#   - requests: arxiv pins requests~=2.32.0; need >=2.33.0 for CVE-2026-25645
#   - python-dotenv: litellm>=1.83.7 pins python-dotenv==1.0.1; we need >=1.2.2
#     to stay on a CVE-patched release. load_dotenv() API is stable across these.
override-dependencies = [
    "requests>=2.33.0",
    "python-dotenv>=1.2.2",
]

[tool.ruff]
target-version = "py312"
src = ["src"]
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
